# cfde-c2m2

./: README.md  pyproject.toml
cfde_c2m2/: __main__.py  const.py  utils.py
cfde_c2m2/cli/: check.py  init.py  package.py  prepare.py  simplify.py  submit.py  unsimplify.py  update.py  upgrade.py  validate.py
cfde_c2m2/ols/: __init__.py  bulk_by_id.py  bulk_by_id_hash.py
