[project]
name = "cfde-c2m2"
version = "0.1.1"
description = "Utilities for preparing C2M2 tables"
authors = [
    {name = "CFDE DRC <help@cfde.cloud>"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.2.1,<9.0.0) ; python_version >= '3.10'",
    "click (<8.2.1) ; python_version < '3.10'",
    "frictionless (>=5.18.1,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (<2)"
]

[tool.poetry.scripts]
cfde-c2m2 = 'cfde_c2m2.__main__:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
